# terraform-aws-websocket-api

./: .gitignore  .trivyignore  README.md  build_docker_images.sh  docker-bake.hcl  docker_buildx_bake.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
docker/: Dockerfile  app.py  connect_handler.js  default_handler.js  disconnect_handler.js  docker-compose.yml  sendmessage_handler.js
envs/: root.hcl  terragrunt.hcl
envs/dev/: env.hcl
envs/dev/account/: terragrunt.hcl
envs/dev/apigateway/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/docker/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/dynamodb/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/ecr/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/kms/: terragrunt.hcl
envs/dev/lambda/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/ssm/: .terraform.lock.hcl  terragrunt.hcl
modules/account/: main.tf  outputs.tf  variables.tf
modules/apigateway/: local.tf  main.tf  outputs.tf  variables.tf  version.tf
modules/docker/: local.tf  main.tf  outputs.tf  variables.tf  version.tf
modules/dynamodb/: main.tf  outputs.tf  variables.tf
modules/ecr/: main.tf  outputs.tf  variables.tf
modules/kms/: main.tf  outputs.tf  variables.tf  version.tf
modules/lambda/: local.tf  main.tf  outputs.tf  variables.tf  version.tf
modules/ssm/: main.tf  outputs.tf  variables.tf  version.tf
script/: build_and_push_to_ecr.sh  cleanup.sh
src/: pyproject.toml
src/connect_handler/: Dockerfile  index.js  main.py  requirements.txt
src/disconnect_handler/: Dockerfile  index.js  main.py
src/media_handler/: Dockerfile  main.py  requirements.txt
src/sendmessage_handler/: index.js
src/webhook_handler/: Dockerfile  main.py  requirements.txt
test/webhook_handler/: test_main.py
